Name:           cassette
Version:        0.1.0
Author:         Mathieu Boespflug
Maintainer:     Mathieu Boespflug <mboes@cs.mcgill.ca>
Synopsis:       A combinator library for simultaneously defining parsers and pretty printers.
Description:
    Combinator library for defining both type safe parsers and pretty printers simultaneously.
    This library performs well in practice because parsers and printers are implemented in CPS
    and because arguments are always curried, rather than packed into nested tuples.
Category:       Parsing, Text
License:        BSD3
License-File:   LICENSE
Cabal-Version:  >= 1.10.0
Build-Type:     Simple
Tested-With:    GHC == 7.4.1

library
  Hs-Source-Dirs: src
  Build-Depends:  base >= 4 && < 5
  Default-Language:     Haskell2010
  default-extensions:   RankNTypes
  other-extensions:     ImpredicativeTypes
  Exposed-Modules:      Text.Cassette
                        Text.Cassette.Prim
                        Text.Cassette.Lead
                        Text.Cassette.Combinator
                        Text.Cassette.Char
                        Text.Cassette.Number
